--- a/src/components/pos/payment-modal/payment-modal.component.html
+++ b/src/components/pos/payment-modal/payment-modal.component.html
@@ -1,4 +1,5 @@
 
+
 <div class="fixed inset-0 bg-black/70 z-50 flex items-center justify-center p-4" (click)="paymentSuccess() ? null : closeModal.emit(true)">
   <div class="bg-gray-800 rounded-lg shadow-xl w-full max-w-4xl max-h-[90vh] flex flex-col border border-gray-700" (click)="$event.stopPropagation()">
     <!-- Header -->
@@ -192,8 +193,9 @@
                 <button (click)="finalizePayment()" [disabled]="!isPaymentComplete()" class="w-full bg-green-600 font-bold py-3 rounded-lg hover:bg-green-500 text-lg disabled:bg-gray-600">Finalizar Pagamento</button>
               </div>
             </div>
-          }
+          </div>
       </div>
+    }
   </div>
 </div>
 
@@ -276,4 +278,4 @@
         </div>
       </div>
   </div>
-  }
+}
