--- a/src/components/inventory/inventory.component.html
+++ b/src/components/inventory/inventory.component.html
@@ -1,6 +1,7 @@
 
 
 
+
 <div class="container mx-auto">
   <div class="flex flex-col md:flex-row justify-between items-start md:items-center mb-6 gap-4">
     <div>
@@ -830,9 +831,9 @@
 }
 
 <!-- Label Generator Modal -->
-@if(isLabelModalOpen() && selectedLabelItem(); as item) {
+@if(isLabelModalOpen()) {
     <app-label-generator-modal 
-        [item]="item" 
+        [item]="selectedLabelItem()" 
         [sourceType]="'INVENTORY'"
         (close)="closeLabelModal()">
     </app-label-generator-modal>
